--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -354,7 +354,7 @@ html {
 	margin: 90px 0 0 140px;
 	width: 100px;
 	height: 100px;
-	border-radius: 50%;
+	border-radius: 4px;
 }
 .nickname-left {
 	width: 40px;
