--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -169,7 +169,7 @@ html {
 	margin: 90px 0 0 140px;
 	width: 100px;
 	height: 100px;
-	border-radius: 50%;
+	border-radius: 4px;
 }
 
 #yourName {
@@ -247,7 +247,7 @@ html {
 	margin: 90px 0 0 140px;
 	width: 100px;
 	height: 100px;
-	border-radius: 50%;
+	border-radius: 4px;
 }
 
 #hisName {
@@ -420,7 +420,7 @@ html {
 	margin: 90px 0 0 140px;
 	width: 100px;
 	height: 100px;
-	border-radius: 50%;
+	border-radius: 4px;
 }
 
 #img {
@@ -428,7 +428,7 @@ html {
 	margin: 90px 0 0 140px;
 	width: 100px;
 	height: 100px;
-	border-radius: 50%;
+	border-radius: 4px;
 }
 .info {
 	text-align: left;
@@ -459,7 +459,7 @@ html {
 	float: left;
 	width: 80px;
 	height: 80px;
-	border-radius: 50%;
+	border-radius: 4px;
 }
 
 .body {
