--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,4 +1,3 @@
-/*------------- Browser reset ------------- */
 * {
 	padding: 0;
 	margin: 0;
@@ -7,7 +6,6 @@
 
 :focus {outline-color:#f6cb7c;}
 
-/* ------------ Body styles ------------ */
 html {
 	background-image: url("/img/waffle-bg.gif")
 }
@@ -18,12 +16,10 @@ body {
 	font: 16px/1.3 'Arial',sans-serif;
 }
 
-/* ------ Section ------ */
 .section {
 	margin: 20px;
 }
 
-/* ------ Home ------ */
 .homebanner {
 	height: 120px;
 	background-color: #3c4446;
@@ -48,11 +44,6 @@ body {
 	color: white;
 }
 
-
-
-/* ------ Invite ------ */
-
-
 .banner {
 	height: 70px;
 	background-color: #3c4446;
@@ -71,16 +62,9 @@ body {
 	color: #d6441b;
 }
 
-
-
-
-/* ------------ Section styles ------------ */
 html {
 	background-image: url("/img/waffle-bg.gif")
 }
-
-
-/* ------ Home ------ */
 
 
 .homesection {
@@ -141,44 +125,25 @@ html {
 	color: #88bfd4;
 }
 
-
-
-/* ------ Connected ------*/
-
-.connected {
+.connected, .personinside {
 	text-align:center;
 	display: block;
 	margin:0px auto;
-	width: 700px;
-	height: 400px;
+	max-width: 400px;
 	background-color: #ffffff;
 	border-radius: 3px;
 	box-shadow:0px 3px 3px #e3e4e6;
 	color: #637277;
+	padding: 40px 20px;
 }
-.connected h2 {
-	padding-top: 20px;
-}
-.infoConnected {
+.userInfo {
 	text-align: left;
 	float: right;
 	margin: 65px 165px 0 0;
 }
-#creatorImage {
-	float: left;
-	margin: 90px 0 0 140px;
-	width: 100px;
-	height: 100px;
-	border-radius: 4px;
-}
 
-#yourName {
-	float:left;
+.loginForm > input {
 	padding-left:10px;
-	width: 150px;
-	height: 30px;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
 	background-color: #f0f1f3;
 	border: 1px solid #d1d1d1;
 	border-radius: 3px;
@@ -187,22 +152,21 @@ html {
 	overflow: hidden;
 }
 
+#yourName {
+	width: 150px;
+	height: 30px;
+
+}
+
 #yourEmail {
-	float:left;
-	padding-left: 10px;
 	width: 200px;
 	height: 30px;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	background-color: #f0f1f3;
-	border: 1px solid #d1d1d1;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
 	margin-bottom:40px;
 }
 
 #yourEnter {
-	float:left;
+	padding-left:0;
+	margin-bottom: 0;
 	width: 110px;
 	height: 40px;
 	text-align:center;
@@ -213,73 +177,19 @@ html {
 	color:white;
 	font-weight: bold;
 	font-size: 15px;
-}
-
-
-
-/* ------ Person Inside ------*/
-
-.personinside {
-	text-align:center;
-	display: block;
-	margin:0px auto;
-	width: 700px;
-	height: 400px;
-	background-color: #ffffff;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	color: #637277;
-}
-.personinside h2 {
-	padding-top: 20px;
-	width: 210px;
-	overflow: hidden;
-}
-
-.infoInside {
-	text-align: left;
-	float: right;
-	margin: 65px 165px 0 0;
-}
-
-#ownerImage {
-	float: left;
-	margin: 90px 0 0 140px;
-	width: 100px;
-	height: 100px;
-	border-radius: 4px;
 }
 
 #hisName {
-	float:left;
-	padding-left:10px;
 	width: 150px;
 	height: 30px;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	background-color: #f0f1f3;
-	border: 1px solid #d1d1d1;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	margin-bottom:20px;
 }
 
 #hisEmail {
-	float:left;
-	padding-left: 10px;
 	width: 200px;
 	height: 30px;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	background-color: #f0f1f3;
-	border: 1px solid #d1d1d1;
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	margin-bottom:40px;
 }
 
 #hisEnter {
-	float:left;
 	width: 110px;
 	height: 40px;
 	text-align:center;
@@ -290,11 +200,9 @@ html {
 	color:white;
 	font-weight: bold;
 	font-size: 15px;
+	margin-bottom:0;
+	padding-left: 0;
 }
-
-
-/* ------ Invite ------ */
-
 
 .invite-textfield {
 	text-align:center;
@@ -325,28 +233,20 @@ html {
 	color: #637277;
 }
 
-
-/* ------ Left ------*/
-
 .left {
 	text-align:center;
 	display: block;
 	margin:0px auto;
-	width: 750px;
-	height: 300px;
+	max-width: 700px;
 	background-color: #ffffff;
 	border-radius: 3px;
 	box-shadow:0px 3px 3px #e3e4e6;
 	color: #637277;
 	margin-bottom: 400px;
-}
-.left h2 {
-	padding-top: 50px;
-	padding-bottom: 6px;
+	padding: 40px 20px;
 }
 .left h5 {
 	font-weight: normal;
-	margin-bottom: 100px;
 }
 
 #leftImage {
@@ -360,9 +260,6 @@ html {
 	width: 40px;
 	overflow: hidden;
 }
-
-/* ------ Too many People ------*/
-
 
 .toomanypeople {
 	text-align:center;
@@ -388,31 +285,20 @@ html {
 	color: #88bfd4;
 }
 
-
-
-/* ------ No Messages ------ */
-
-
 .nomessages {
 	text-align:center;
 	display: block;
 	margin:0px auto;
-	width: 750px;
-	height: 300px;
+	max-width: 700px;
 	background-color: #ffffff;
 	border-radius: 3px;
 	box-shadow:0px 3px 3px #e3e4e6;
 	color: #637277;
 	margin-bottom: 400px;
-}
-.nomessages h2 {
-	padding-top: 50px;
-	overflow: hidden;
-	padding-bottom: 6px;
+	padding: 40px 20px;
 }
 .nomessages h5 {
 	font-weight: normal;
-	margin-bottom: 100px;
 }
 
 #noMessagesImage {
@@ -420,7 +306,7 @@ html {
 	margin: 90px 0 0 140px;
 	width: 100px;
 	height: 100px;
-	border-radius: 4px;
+	border-radius: 50%;
 }
 
 #img {
@@ -428,23 +314,11 @@ html {
 	margin: 90px 0 0 140px;
 	width: 100px;
 	height: 100px;
-	border-radius: 4px;
-}
-.info {
-	text-align: left;
-	float: right;
-	margin: 65px 60px 0 0;
-	width: 405px;
-	overflow: hidden;
+	border-radius: 50%;
 }
 .nickname-chat {
 	overflow: hidden;
 }
-
-
-/* ------ Chat Screen ------ */
-
-
 
 .image {
 	clear:both;
@@ -459,7 +333,7 @@ html {
 	float: left;
 	width: 80px;
 	height: 80px;
-	border-radius: 4px;
+	border-radius: 50%;
 }
 
 .body {
@@ -543,9 +417,6 @@ html {
 	padding-top: 4px;
 }
 
-
-/* ------------ Footer styles ------------ */
-
 footer {
 	position:fixed;
 	bottom:0;
@@ -595,12 +466,6 @@ footer {
 	cursor:pointer;
 }
 
-
-
-
-/* ---------------------- HIDE -------------------------- */
-
-
 .connected {
 	display: none;
 }
@@ -631,7 +496,7 @@ footer {
 
 .chatscreen{
 	display:none;
-	width:700px;
+	max-width:700px;
 	margin: 0 auto 200px;
 	overflow:hidden;
 }
